syntax = "proto3";

option csharp_namespace = "Shared";
package business;

// The business registration service definition.
service BusinessRegistration {
  rpc CaptureBusinessInformation (BusinessInfoRequest) returns (BusinessInfoReply);
}

// The request message containing the business info.
message BusinessInfoRequest {
  string company_name = 1;
  string registration_number = 2;
  string vat_number = 3;
  string industry = 4;
  string phone = 5;
  string email = 6;
  string website = 7;
  string address1 = 8;
  string address2 = 9;
  string address3 = 10;
  string city = 11;
  string country = 12;
  string application_id = 13;
}

// The response message confirming the capture.
message BusinessInfoReply {
  string message = 1;
}
